Added effects to images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
  <div class="container">
 	<div class="intro">
-		<img class="profile-picture" src="C:/Users/Mike/Pictures/Camera Roll/Mike.png">
+		<img class="profile-picture" src="images/profile-picture.jpg">
 		<h1>Michael Kimani</h1>
 		<h3>Web developer at Careerfoundry</h3>
 		<p>{{ Pause and ponder }}</p>
@@ -38,11 +38,24 @@
  	
  		<h3 class="projects-heading">My projects</h3>
  		<div class="my-projects">
- 		<img class="project-image" src="C:/Users/Mike/Downloads/Project1.jpg">
- 		<img class="project-image" src="C:/Users/Mike/Downloads/Project2.jpg">
- 		<img class="project-image" src="C:/Users/Mike/Downloads/Project3.jpg">
- 		<img class="project-image" src="C:/Users/Mike/Downloads/Project4.jpg">
- 		</div>
+ 		 <div class="project-image-wrapper">
+			<h4>Project-1</h4>
+			<img class="project-image" src="images/Project-1.jpg">
+		 </div>
+ 		<div class="project-image-wrapper">
+			<h4>Project-2</h4>
+			<img class="project-image" src="images/Project-2.jpg">
+		 </div>
+ 		<div class="project-image-wrapper">
+			<h4>Project-3</h4>
+			<img class="project-image" src="images/Project-3.jpg">
+		 </div>
+ 		<div class="project-image-wrapper">
+			<h4>Project-4</h4>
+			<img class="project-image" src="images/Project-4.jpg">
+		 </div>
+		  
+ 	    </div>
  	<div class="links-and-contact">
  	<div class="links">
  		<h3>Links</h3>
