Added project images

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
  		<div class="my-projects">
  		 <div class="project-image-wrapper">
 			<h4>Project-1</h4>
-			<img class="project-image" src="images/Project-1.jpg">
+			<img class="project-image" src="images/project-1.jpg">
 		 </div>
  		<div class="project-image-wrapper">
 			<h4>Project-2</h4>
-			<img class="project-image" src="images/Project-2.jpg">
+			<img class="project-image" src="images/project-2.jpg">
 		 </div>
  		<div class="project-image-wrapper">
 			<h4>Project-3</h4>
-			<img class="project-image" src="images/Project-3.jpg">
+			<img class="project-image" src="images/project-3.jpg">
 		 </div>
  		<div class="project-image-wrapper">
 			<h4>Project-4</h4>
-			<img class="project-image" src="images/Project-4.jpg">
+			<img class="project-image" src="images/project-4.jpg">
 		 </div>
 		  
  	    </div>
