Getting user entered values

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
  			</label>
  			
  			<div class ="submit-button-wrapper">
-				<input type="submit" valid="Send message" >
+				<input type="submit" valid="Send message" id = "submit-button"/>
 			 </div>
  		</form>
 
